# remote_dictionary

./: README.md
.github/workflows/: ubuntu_build.yml
src/server/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/server/cli_parser/: cliparser.cpp  cliparser.h  settings.h
src/server/dictionary/: dictionary.cpp  dictionary.h  saver.cpp  saver.h
src/server/network/: connection.cpp  connection.h  proxy_dict.cpp  proxy_dict.h  server.cpp  server.h
src/server/tests/: CMakeLists.txt  dictionary_test.cc  dictionary_test.cpp
